# mn-api

./: README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
mn_api/: config.py  logging_config.py  main.py
tests/: test_api.py
