[project]
name = "mirrorneuron-api"
dynamic = ["version"]
description = "MirrorNeuron REST API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mirrorneuron-python-sdk",
    "fastapi>=0.100.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.23.0"
]

[project.optional-dependencies]
test = ["httpx>=0.27.0"]

[project.scripts]
mn-api = "mn_api.main:start"

[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
local_scheme = "no-local-version"
